fixed layout bug

--- a/client/src/pages/Settings.page/subcomponents/InstructorSchedule/InstructorSchedule.module.sass
+++ b/client/src/pages/Settings.page/subcomponents/InstructorSchedule/InstructorSchedule.module.sass
@@ -12,18 +12,17 @@
   align-items: center
   flex-grow: 1
   margin-right: 20px
+  z-index: 3
 
 .instructors
   height: 40px
   width: 48%
   max-width: 300px
   margin-right: 20px
-  z-index: 3
 
 .mode
   width: 48%
   max-width: 300px
-  z-index: 3
 
 .weeks
   display: flex
